<resources>
    <string name="app_name">1 app</string>
    <string name="Welcome">Welcome!</string>
    <string name="Email">Email</string>
    <string name="Create_Your_Account">Create Your Account</string>
    <string name="Password">Password</string>
    <string name="Sign_up">Sign up</string>
    <string name="do_not_have_an_account">Don,t have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="or_continue_with"> or continue with </string>
    <string name="todo">TODO</string>
    <string name="apple">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>