<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    >

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/Welcome"-->
<!--        android:textSize="20sp"-->
<!--        android:textStyle="bold"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:layout_marginStart="15dp"-->
<!--        android:textColor="#352A2A"-->
<!--        />-->


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/backarrow"
        android:layout_marginTop="26dp"
        android:layout_marginStart="10dp"

        />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="149dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:src="@drawable/logo_car" />
    <TextView
        android:id="@+id/tv_create_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Create_Your_Account"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#4C4949"
        android:layout_gravity="center"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:hint="@string/Email"
        android:drawableLeft="@drawable/baseline_email_24"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/custom_edit_text"
        android:autofillHints="username"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:hint="@string/Password"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/custom_edit_text"
        android:autofillHints="Password"
        android:inputType="textPassword"
        android:padding="10dp"

        />

    <Button
        android:id="@+id/bt_sign_up"
        android:background="@drawable/custom_bg_btn"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/Sign_up"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginTop="30dp"

        />
    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/tv_or_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_continue_with"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        >


        <ImageView
            android:id="@+id/iv_facebook_logo"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:src="@drawable/facebook"
            android:background="@drawable/custom_edit_text"
            android:padding="10dp"

            />
        <ImageView
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:src="@drawable/apple"
            android:layout_marginStart="30dp"
            android:background="@drawable/border_bg_btn"
            android:padding="10dp"

            />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:src="@drawable/icon_google"
            android:layout_marginStart="30dp"
            android:background="@drawable/border_bg_btn"
            android:padding="10dp"
            tools:ignore="MissingPrefix"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        >


    <TextView
        android:id="@+id/tv_dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_not_have_an_account"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="#666565"
        android:padding="6dp"

        />

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#673AB7"
        android:padding="5dp"
        android:layout_toEndOf="@+id/tv_dont_have_account"
        />
    </RelativeLayout>
<!--<View-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="1dp"-->
<!--    android:background="@drawable/"-->
<!--    />-->




<!--    <ImageView-->
<!--        android:layout_width="239dp"-->
<!--        android:layout_height="217dp"-->
<!--        android:layout_marginStart="68dp"-->
<!--        android:layout_marginTop="60dp"-->
<!--        android:layout_marginEnd="60dp"-->
<!--        android:layout_marginBottom="60dp"-->
<!--        -->
<!--        />-->




<!--    <Button-->
<!--        android:layout_width="90dp"-->
<!--        android:layout_height="70dp"-->
<!--        android:layout_marginStart="50dp"-->
<!--        android:layout_marginTop="600dp"-->


<!--        />-->
</LinearLayout>
</ScrollView>
